# src/roe/_generated/models/__init__.py
@@ -2,6 +2,7 @@
 
 from .agent_datum import AgentDatum
 from .agent_engine_type_list import AgentEngineTypeList
+from .agent_engine_type_list_engines_item import AgentEngineTypeListEnginesItem
 from .agent_execution_request_request import AgentExecutionRequestRequest
 from .agent_input_definition import AgentInputDefinition
 from .agent_job_delete_data_response import AgentJobDeleteDataResponse
@@ -35,7 +36,6 @@ from .policy_version import PolicyVersion
 from .policy_version_created_by import PolicyVersionCreatedBy
 from .supported_llm_model import SupportedLLMModel
 from .supported_llm_model_list import SupportedLLMModelList
-from .temporal_workflow import TemporalWorkflow
 from .update_policy import UpdatePolicy
 from .update_policy_request import UpdatePolicyRequest
 from .user_info import UserInfo
@@ -43,6 +43,7 @@ from .user_info import UserInfo
 __all__ = (
     "AgentDatum",
     "AgentEngineTypeList",
+    "AgentEngineTypeListEnginesItem",
     "AgentExecutionRequestRequest",
     "AgentInputDefinition",
     "AgentJobDeleteDataResponse",
@@ -76,7 +77,6 @@ __all__ = (
     "PolicyVersionCreatedBy",
     "SupportedLLMModel",
     "SupportedLLMModelList",
-    "TemporalWorkflow",
     "UpdatePolicy",
     "UpdatePolicyRequest",
     "UserInfo",
